--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.0",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^10.6.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "2.13.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.14.1",
-    "yarn": "^1.22.21"
+    "yarn": "^1.22.21",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
