--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.14.1",
     "yarn": "^1.22.21",
-    "expo-dev-client": "~2.2.1"
+    "expo-dev-client": "~2.2.1",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
